unpackaged/main/default/objects/Enquiries_and_Bookings__c/fields/This_Qtr_Last_Yr_Client_Comm_Formula__c.field-meta.xml
<CustomField>
    <fullName>This_Qtr_Last_Yr_Client_Comm_Formula__c</fullName>
    <formula>This_Qtr_Last_Year_Revenue_Formula__c  *  Client_Commission__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>This Qtr Last Yr Client Comm Formula</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>