unpackaged/main/default/objects/Enquiries_and_Bookings__c/fields/This_Quarter_Last_Yr_Commission_Formula__c.field-meta.xml
<CustomField>
    <fullName>This_Quarter_Last_Yr_Commission_Formula__c</fullName>
    <formula>This_Qtr_Last_Year_Revenue_Formula__c  *  Commission__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>This Quarter Last Yr Commission Formula</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>