unpackaged/main/default/objects/Enquiries_and_Bookings__c/fields/This_Year_Revenue__c.field-meta.xml
<CustomField>
    <fullName>This_Year_Revenue__c</fullName>
    <label>This Year Revenue</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>