unpackaged/main/default/objects/Enquiries_and_Bookings__c/fields/This_Year_SITU_Revenue_Formula__c.field-meta.xml
<CustomField>
    <fullName>This_Year_SITU_Revenue_Formula__c</fullName>
    <formula>This_Year_Commission_Formula__c  -  This_Year_Client_Commission_Formula__c  +  This_Year_Booking_Fee_Formula__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>This Year SITU Revenue Formula</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>