unpackaged/main/default/objects/Enquiries_and_Bookings__c/fields/This_Year_Start_Date_Formula__c.field-meta.xml
<CustomField>
    <fullName>This_Year_Start_Date_Formula__c</fullName>
    <formula>DATE(YEAR(TODAY()),1,1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>This Year Start Date Formula</label>
    <type>Date</type>
</CustomField>