unpackaged/main/default/objects/Enquiries_and_Bookings__c/fields/Total_Booking_Value__c.field-meta.xml
<CustomField>
    <fullName>Total_Booking_Value__c</fullName>
    <label>Total Booking Value</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>