unpackaged/main/default/objects/Enquiries_and_Bookings__c/fields/Total_Booking_Value_Formula__c.field-meta.xml
<CustomField>
    <fullName>Total_Booking_Value_Formula__c</fullName>
    <formula>Number_of_Nights__c  *  Net_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Booking Value Formula</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>