unpackaged/main/default/objects/Enquiries_and_Bookings__c/fields/Total_Revenue_to_SITU__c.field-meta.xml
<CustomField>
    <fullName>Total_Revenue_to_SITU__c</fullName>
    <label>Total Revenue to SITU</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>