unpackaged/main/default/objects/Enquiries_and_Bookings__c/fields/Total_Revenue_to_SITU_Formula__c.field-meta.xml
<CustomField>
    <fullName>Total_Revenue_to_SITU_Formula__c</fullName>
    <formula>(Commission_Amount_Formula__c  -  Client_Commission_Amount_Formula__c)  +  Booking_Fee_Amount_Formula__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Revenue to SITU Formula</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>