unpackaged/main/default/objects/Enquiries_and_Bookings__c/fields/Total_Revenue_to_Supplier__c.field-meta.xml
<CustomField>
    <fullName>Total_Revenue_to_Supplier__c</fullName>
    <label>Total Revenue to Supplier</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>