unpackaged/main/default/objects/Enquiries_and_Bookings__c/listViews/Last_Month.listView-meta.xml
<ListView>
    <fullName>Last_Month</fullName>
    <booleanFilter>1 AND 2 AND 3 AND 4</booleanFilter>
    <columns>Created_Date__c</columns>
    <columns>Owner_Name__c</columns>
    <columns>NAME</columns>
    <columns>Enquiry_Status__c</columns>
    <columns>Account__c</columns>
    <columns>Contact__c</columns>
    <columns>Supplier_Account__c</columns>
    <columns>Check_In_Date__c</columns>
    <columns>Check_Out_Date__c</columns>
    <columns>Number_of_Nights__c</columns>
    <columns>Total_Booking_Value__c</columns>
    <columns>Total_Revenue_to_SITU__c</columns>
    <columns>SLA_Response_Time_Target_Minutes__c</columns>
    <columns>Enquiry_to_Quote_SLA_Timer__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Created_Date__c</field>
        <operation>greaterOrEqual</operation>
        <value>LAST_MONTH</value>
    </filters>
    <filters>
        <field>Owner_Name__c</field>
        <operation>notEqual</operation>
        <value>administrator</value>
    </filters>
    <filters>
        <field>Owner_Name__c</field>
        <operation>notEqual</operation>
        <value>Jenny Brace</value>
    </filters>
    <filters>
        <field>Owner_Name__c</field>
        <operation>notEqual</operation>
        <value>Katie Thomas</value>
    </filters>
    <label>Last Month</label>
</ListView>