unpackaged/main/default/objects/Enquiries_and_Bookings__c/listViews/This_Month.listView-meta.xml
<ListView>
    <fullName>This_Month</fullName>
    <columns>Owner_Name__c</columns>
    <columns>NAME</columns>
    <columns>Enquiry_Status__c</columns>
    <columns>Account__c</columns>
    <columns>Contact__c</columns>
    <columns>Supplier_Account__c</columns>
    <columns>Check_In_Date__c</columns>
    <columns>Check_Out_Date__c</columns>
    <columns>Number_of_Nights__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Total_Booking_Value__c</columns>
    <columns>Total_Revenue_to_SITU__c</columns>
    <columns>SLA_Response_Time_Target_Minutes__c</columns>
    <columns>Enquiry_to_Quote_SLA_Timer__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Owner_Name__c</field>
        <operation>notEqual</operation>
        <value>administrator</value>
    </filters>
    <filters>
        <field>Owner_Name__c</field>
        <operation>notEqual</operation>
        <value>Jenny Brace</value>
    </filters>
    <filters>
        <field>Owner_Name__c</field>
        <operation>notEqual</operation>
        <value>Katie Thomas</value>
    </filters>
    <filters>
        <field>Enquiry_Status__c</field>
        <operation>equals</operation>
        <value>Closed Booked</value>
    </filters>
    <label>This Month</label>
</ListView>