unpackaged/main/default/objects/Enquiries_and_Bookings__c/listViews/Today.listView-meta.xml
<ListView>
    <fullName>Today</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>Owner_Name__c</columns>
    <columns>Account__c</columns>
    <columns>Enquiry_Status__c</columns>
    <columns>Number_of_Nights__c</columns>
    <columns>Total_Revenue_to_SITU__c</columns>
    <columns>SLA_Response_Time_Target_Minutes__c</columns>
    <columns>Enquiry_to_Quote_SLA_Timer__c</columns>
    <columns>Is_it_a_Live_Booking__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Created_Date__c</field>
        <operation>greaterOrEqual</operation>
        <value>TODAY</value>
    </filters>
    <label>Today</label>
</ListView>